@@ -78,24 +78,24 @@ static void set_socket_vars(apr_socket_t *sock, int family)
     sock->remote_addr->sa.sin.sin_family = family;
 
     if (family == APR_INET) {
-        sock->local_addr->sa_len = sizeof(struct sockaddr_in);
+        sock->local_addr->salen = sizeof(struct sockaddr_in);
         sock->local_addr->addr_str_len = 16;
         sock->local_addr->ipaddr_ptr = &(sock->local_addr->sa.sin.sin_addr);
         sock->local_addr->ipaddr_len = sizeof(struct in_addr);
 
-        sock->remote_addr->sa_len = sizeof(struct sockaddr_in);
+        sock->remote_addr->salen = sizeof(struct sockaddr_in);
         sock->remote_addr->addr_str_len = 16;
         sock->remote_addr->ipaddr_ptr = &(sock->remote_addr->sa.sin.sin_addr);
         sock->remote_addr->ipaddr_len = sizeof(struct in_addr);
     }
 #if APR_HAVE_IPV6
     else if (family == APR_INET6) {
-        sock->local_addr->sa_len = sizeof(struct sockaddr_in6);
+        sock->local_addr->salen = sizeof(struct sockaddr_in6);
         sock->local_addr->addr_str_len = 46;
         sock->local_addr->ipaddr_ptr = &(sock->local_addr->sa.sin6.sin6_addr);
         sock->local_addr->ipaddr_len = sizeof(struct in6_addr);
 
-        sock->remote_addr->sa_len = sizeof(struct sockaddr_in6);
+        sock->remote_addr->salen = sizeof(struct sockaddr_in6);
         sock->remote_addr->addr_str_len = 46;
         sock->remote_addr->ipaddr_ptr = &(sock->remote_addr->sa.sin6.sin6_addr);
         sock->remote_addr->ipaddr_len = sizeof(struct in6_addr);
@@ -165,7 +165,7 @@ apr_status_t apr_close_socket(apr_socket_t *thesocket)
 apr_status_t apr_bind(apr_socket_t *sock, apr_sockaddr_t *sa)
 {
     if (bind(sock->socketdes, 
-             (struct sockaddr *)&sa->sa, sa->sa_len) == -1) {
+             (struct sockaddr *)&sa->sa, sa->salen) == -1) {
         return errno;
     }
     else {
@@ -196,10 +196,10 @@ apr_status_t apr_accept(apr_socket_t **new, apr_socket_t *sock, apr_pool_t *conn
 #endif
     (*new)->timeout = -1;
     
-    (*new)->remote_addr->sa_len = sizeof((*new)->remote_addr->sa);
+    (*new)->remote_addr->salen = sizeof((*new)->remote_addr->sa);
     (*new)->socketdes = accept(sock->socketdes, 
                                (struct sockaddr *)&(*new)->remote_addr->sa,
-                               &(*new)->remote_addr->sa_len);
+                               &(*new)->remote_addr->salen);
 
     if ((*new)->socketdes < 0) {
         return errno;
@@ -236,7 +236,7 @@ apr_status_t apr_connect(apr_socket_t *sock, apr_sockaddr_t *sa)
 
     if ((connect(sock->socketdes,
                  (const struct sockaddr *)&sa->sa.sin,
-                 sa->sa_len) < 0) &&
+                 sa->salen) < 0) &&
         (errno != EINPROGRESS)) {
         return errno;
     }
